--- a/fw/make/Makefile
+++ b/fw/make/Makefile
@@ -1,6 +1,6 @@
 ##############################################################################
 BUILD = build
-BIN = Demo
+BIN = siggen
 
 ##############################################################################
 .PHONY: all directory clean size
@@ -8,6 +8,12 @@ BIN = Demo
 CC = arm-none-eabi-gcc
 OBJCOPY = arm-none-eabi-objcopy
 SIZE = arm-none-eabi-size
+
+ifeq ($(OS), Windows_NT)
+  MKDIR = gmkdir
+else
+  MKDIR = mkdir
+endif
 
 CFLAGS += -W -Wall --std=gnu11 -Os
 CFLAGS += -fno-diagnostics-show-caret
@@ -63,7 +69,7 @@ $(BUILD)/$(BIN).bin: $(BUILD)/$(BIN).elf
 	@$(CC) $(CFLAGS) $(filter %/$(subst .o,.c,$(notdir $@)), $(SRCS)) -c -o $@
 
 directory:
-	@gmkdir -p $(BUILD)
+	@$(MKDIR) -p $(BUILD)
 
 size: $(BUILD)/$(BIN).elf
 	@echo size:
@@ -74,3 +80,4 @@ clean:
 	@-rm -rf $(BUILD)
 
 -include $(wildcard $(BUILD)/*.d)
+
